--- a/views/index.ejs
+++ b/views/index.ejs
@@ -148,8 +148,8 @@
 			</div>
 		</div>
 	</section>
-
-	<section class="projects d-flex one">
+	
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?export=view&id=175P-QLU4Y6-HuvpkNI_VdIAKnt45BqdQ" alt="EnigmaLabelDAO - Ethereum Dapp to join a Record Label DAO."/>
 			<h2>SPOTx</h2>
@@ -164,7 +164,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?export=view&id=1tjnTFJoL70ciFpZogTwcY9Fs9Om9-1oe" alt="EnigmaLabelDAO - Ethereum Dapp to join a Record Label DAO."/>
 			<h2>EnigmaLabelDao</h2>
@@ -176,7 +176,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex one">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			
 			<img src="https://drive.google.com/uc?export=view&id=1RjL792msNHOXeXJWl5mbnGj8swOcEzW_" alt="LyricPortal - Ethereum Dapp for sharing lyrics"/>
@@ -189,7 +189,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1OO0ay-fy6IThnEkeMCp7fQ17NniygSlG" alt="MetaShop - 3D VR Web Shop"/>
 			<h2>MetaShop</h2>
@@ -204,7 +204,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex one">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1ffpL3s2ejJaFSjNRW23g0moWkCbpcWJT" alt="Wavy Pads Web Synth"/>
 			<h2>Wavy Pads</h2>
@@ -216,7 +216,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1KzxObx4MwrtQ_iXZn2BG1tYrJnFCH2Hm" alt="Group Event Manager Mobile App"/>
 			<h2>Group Event Manager</h2>
@@ -228,7 +228,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex one">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1ps5VAAgkwMktDpkeaaOCKNdbz2BeLQPQ" alt="Jumpy Blocks"/>
 			<h2>Jumpy Blocks</h2>
@@ -240,7 +240,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1kHyPPxqmGHWePdPgrhfEkBP2hxI0s90b"/>
 			<h2>YouTube Multiple Comment App</h2>
@@ -252,7 +252,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex one">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1AQCVEyUjSCshzLvIyqwEMuYjEUTwa8MF"/>
 			<h2>VirtualRollCall</h2>
@@ -264,7 +264,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1QwBhqXjcjJEMfJhX7J4b_cKfjBgzi_o1"/>
 			<h2>Geek Text</h2>
@@ -276,7 +276,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex one">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1Uirx5_Jkx9MH5sIOVllo7TiwKpuh0AXB"/>
 			<h2>Backroom Sessions iOS Application</h2>
@@ -288,7 +288,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1aIJAwt07xGLfUYaEVEatpuLGzzSkge-9" alt="Weather App"/>
 			<h2>Weather App</h2>
@@ -300,9 +300,9 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex one">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1zGuAKQCd1hMInSFJlgaPIqz_PqfUs41K" alt="Patatap Clone"/>
+			<img src="https://drive.google.com/uc?id=1zGuAKQCd1hMInSFJlgaPIqz_PqfUs41K" alt="Patatap Cltwo"/>
 			<h2>Shapes and Sounds - a Patatap clone</h2>
 			<p class="serif"> May, 2018 </p>
 			<p class="serif">I built a patatap.com clone using paper.js, howler.js, and sounds from a new song I've been working on.</p>
@@ -312,7 +312,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1FMw6bO6LfzOKDr4sn9nRnJM42RGPkMCQ" alt="Bulk Texting Application"/>
 			<h2>Automated Bulk Texting</h2>
